--- a/src/main/webapp/03_paragraph.html
+++ b/src/main/webapp/03_paragraph.html
@@ -4,14 +4,15 @@
 	<meta charset="UTF-8"> <!--  한글처리 -->
 </head>
 <body>
-	<!--  <p> 연속된 공백이나 줄바뀜은 단순한 공백 한 칸으로 처리. 한줄로 쭉~ 출력됨. -->
-	<p>
+	<!--  <p> 연속된 공백이나 줄바뀜은 단순한 공백 한 칸으로 처리. 
+							한줄로 쭉~ 출력됨. -->
+	<p><!-- 문단 구분 시 사용 -->
 	동해물과 백두산이 마르고 닳도록
 	하느님이 보우하사 우리나라     만세
 	무궁화 삼천리 화려강산
 	대한사람 대한으로 길이 보전하세
 	</p>
-	<br>
+	<br> <!-- 줄바꿀 때 사용 -->
 	<p>
 	이 기상과 이맘으로 충성을 다하여<br>
 	괴로우나 즐거우나 나라 사랑하세 <br>
@@ -19,10 +20,19 @@
 	대한사람 대한으로 길이 보전하세 <br>
 	</p>
 	
-	<!-- 공백을 띄우기 위해서는 "&nbsp;" 사용해야. -->
+	
 	<p>
-	아름다운 &nbsp;&nbsp;&nbsp; 강산
+	아름다운 &nbsp;&nbsp;&nbsp; 강산 <!-- 공백 "&nbsp;" 사용. -->
 	</p>
+	
+	<hr><!-- <hr>한줄 긋기 -->
+	
+	<pre>
+		입력한 대로 자유롭게 보여주는 pre 태크입니다.
+	
+		br 태그나 p 태그가 아니더라도
+		줄바꿈도 가능하며 태그도 그래도 표현할 수 잇습니다.
+	</pre>
 
 </body>
 </html>
