--- a/src/main/webapp/22_javascript_function.html
+++ b/src/main/webapp/22_javascript_function.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	
 	<!-- 자바스크립트 함수 정의 -->
-	<script type = "text/javascript">
-	function showTime(){
+	
+	<script type = "text/javascript"> /*생략가능*/
+	function showTime(){ /*자바 스크립트 객체 생성*/
 		document.getElementById('demo').innerHTML = Date();
 	}
 	</script>
